@@ -1236,3 +1236,6 @@ Sudo 1.6.1 released.
 390) Systems that return RLIM_INFINITY for RLIMIT_NOFILE (like AIX)
      would loop for a very loing time during sudo startup.  A value of
      RLIM_INFINITY is now ignored (getdtablesize/sysconf is used instead).
+
+391) Locking in visudo was broken.  We now lock the sudoers file, not the
+     sudoers temp file, which should be safe.
